<resources>
    <string name="app_name">FoodRunner</string>
    <string name="nav1">Menu</string>
    <string name="nav2">Location</string>
    <string name="nav3">Cart</string>
    <string name="nav4">Account</string>
    <string name="nav_search">search</string>
    <string name="nav_button">topnav</string>
    <string name="tab1">Breakfast</string>
    <string name="tab2">Lunch</string>
    <string name="tab3">Dinner</string>
    <string name="btn">LogIn</string>
    <string name="fName">Delete Items</string>
    <string name="addItem">Add Item</string>
    <string name="add_item_text">Name</string>
    <string name="add_item_text2">Price</string>
    <string name="add_item_text3">Category</string>
    <string name="add_item_text4">Description</string>
    <string name="btn2">Login As Admin</string>
    <string name="btnAdd">ADD</string>
    <string name="btnDel">Delete</string>
    <string name="item_name">Rice</string>
    <string name="cart" />
    <string name="con_des">delete</string>
    <string name="item_des">item</string>
    <string name="main">MAIN DISHES</string>
    <string name="item1">Morning Cofee</string>
    <string name="item2">Rice</string>
    <string name="item3">Bacon</string>
    <string name="item4">Toast</string>
    <string name="item5">Waffles</string>
    <string name="item6">Rice</string>
    <string name="itemPri1">Rs 120.00</string>
    <string name="itemPri2">Rs 300.00</string>
    <string name="itemPri3">Rs 450.00</string>
    <string name="itemPri4">Rs 200.00</string>
    <string name="itemPri5">Rs 350.00</string>
    <string name="browse">Browse</string>
    <string name="AddImage">Add Image</string>
    <string name="Browse">Browse</string>
    <string name="btnUpdate">Update</string>
    <string name="addtocart">Add To Cart</string>
    <string name="Profucts">Products</string>
    <string name="manageitems">Manage Items</string>
    <string name="longpress">Long Press To Delete/Update Item</string>


    <string name="add_more_btn">add more item</string>
    <string name="submit_btn">submit</string>

    <color name="Black">#000000</color>
    <color name="ExpendChildBackground">#2e856e</color>
    <color name="ExpendChildBackground1">#ffffff</color>
    <color name="ExpendGroupBackground">#00e600</color>
    <color name="SplashWindowBackground">#99e6ff</color>

    <string name="name_on_card">name on card</string>
    <string name="cvv">CVV</string>
    <string name="expiary_date">expiary_date</string>
    <string name="pay">pay</string>
    <string name="card_number">card_number</string>
    <string name="postal_code">Postal code</string>
    <string name="Nic_number">Nic Value</string>
    <string name="order">Order</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="Phone_number">phone number</string>
    <string name="pay_on_delivery">pay on delivery</string>
    <string name="Name">name</string>
    <string name="card_Number">card number</string>
    <string name="exp_date">exp date</string>
    <string name="CVV">cvv</string>
    <string name="btnOline">Pay online</string>
    <string name="bntDelivery">Cash on delivery</string>

    <!--Strings related to Login/signup/forgot password/delivery options-->
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="delivery">Delivery Options</string>
    <string name="last_ords">View Your Previous Orders</string>
    <string name="To">Deliver To</string>
    <string name="DatePic">Select Date</string>
    <string name="TimePic">Select Time</string>
    <string name="Address">Address</string>
    <string name="When">When would you like to place your order?</string>
    <string name="Now">Now</string>
    <string name="Later">Later</string>
    <string name="Date">Date</string>

    //New
    <string name="action_sign_in_short">Register</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="Time">Time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_place">Pick A place</string>
    <string name="View_Location">View Saved Location</string>
    <string name="Finished"><![CDATA[Thank You For Your Order. Your Order Will be delivered to the Given Address & Given Time.]]></string>
    <string name="ok">OK</string>
    <string name="view_saved_location">View Saved Location</string>
    <string name="delivery_options">Delivery Options</string>
    <string name="admin">log in as admin</string>
    <string name="details">Customer Card Details</string>


</resources>