<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".payment.listViewOnline">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="89dp"
        android:layout_height="37dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/Name" />

    <TextView
        android:id="@+id/tvCarNum"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/card_Number" />

    <TextView
        android:id="@+id/tvEXP"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/exp_date" />

    <TextView
        android:id="@+id/tvCVV"
        android:layout_width="58dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"

        android:text="@string/CVV" />

</LinearLayout>