<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewGET"
        android:layout_width="match_parent"
        android:layout_height="96dp" />

    <Button
        android:id="@+id/updateBrowse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Browse" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnUpdate" />

    <Button
        android:id="@+id/btnDel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDel" />

</LinearLayout>