<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".payment.payondelivery">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="247dp"
        android:layout_height="0dp"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="43dp"
        android:text="@string/pay_on_delivery"
        android:textSize="33dp"
        app:layout_constraintBottom_toTopOf="@+id/name2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phonenumber2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:layout_marginBottom="37dp"
        android:ems="10"
        android:hint="@string/Phone_number"
        android:inputType="phone"
        android:maxLength="10"
        app:layout_constraintBottom_toTopOf="@+id/btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nicnumber2" />

    <EditText
        android:id="@+id/name2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"

        app:layout_constraintBottom_toTopOf="@+id/postalcode2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/adress2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        app:layout_constraintBottom_toTopOf="@+id/nicnumber2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postalcode2" />

    <EditText
        android:id="@+id/postalcode2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:layout_marginBottom="33dp"
        android:ems="10"
        android:hint="@string/postal_code"
        android:inputType="number"
        android:maxLength="5"
        app:layout_constraintBottom_toTopOf="@+id/adress2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name2" />

    <EditText
        android:id="@+id/nicnumber2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:hint="@string/Nic_number"
        android:inputType="number"
        android:maxLength="9"
        app:layout_constraintBottom_toTopOf="@+id/phonenumber2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adress2" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_marginBottom="94dp"
        android:text="@string/order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phonenumber2" />


</androidx.constraintlayout.widget.ConstraintLayout>