<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".Delivery"
    tools:ignore="ExtraText">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="411dp"
        android:layout_height="45dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="411dp"
        android:layout_height="57dp"
        app:itemBackground="@color/design_default_color_background"
        app:menu="@menu/bottom_menu"
        tools:layout_editor_absoluteY="522dp" />

    <ImageView
        android:id="@+id/top_nav"
        android:layout_width="49dp"
        android:layout_height="57dp"
        android:contentDescription="@string/nav_button"
        app:srcCompat="@drawable/ic_baseline_reorder_24" />

    <!--Picked Date-->

    <!--Picked Time-->

    <!--Deliver to topic-->

    <!--Deliver to topic-->

    <!--Address View-->


    <!--Submit button-->


    <!--When to deliver topic-->

    <!--Date picker-->

    <!--Time picker-->

    <!--Place picker-->

    <!--Text view for map-->

    <!--Now button-->
    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:text="@string/submit"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="392dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="84dp"
        android:layout_height="36dp"
        android:text="@string/Now"
        android:textColor="@color/white"
        android:textColorHint="@color/design_default_color_primary_variant"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="119dp" />

    <!--Later button-->
    <Button
        android:id="@+id/button3"
        android:layout_width="84dp"
        android:layout_height="36dp"
        android:text="@string/Later"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="254dp"
        tools:layout_editor_absoluteY="120dp" />


</androidx.constraintlayout.widget.ConstraintLayout>